--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1>This is Calculator</h1>
  <section class="calculator">
   <form>
    <input type="text" name="" id="" class="screen">
